--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t3 center">파워등급 달성하기 done</div>
+        <div class="bucket img1-t3 center done">파워등급 달성하기</div>
         <div class="bucket img2-t3 center">월매출 1000만원</div>
         <div class="bucket img2 center">월매출 1500만원</div>
         <div class="bucket img1 center">월매출 2000만원</div>
